# RedEyeDetector_Corrector

./: CMakeLists.txt  Phase2_Documentation.docx  main.cpp
src/: Phase2.cpp  Phase2.h
